chore: match syntax across all samples